fix: disabled form input colors in dark mode (#82)
* disabled SelectInput and FormLabel

* rest of inputs

* Update SelectInput.module.scss

* Update chromatic.config.json

--- a/src/components/SelectInput/SelectInput.module.scss
+++ b/src/components/SelectInput/SelectInput.module.scss
@@ -278,6 +278,7 @@
       &:global(.react-select__control--is-disabled) {
         :global(.react-select__dropdown-indicator) {
           color: var(--color-font-disabled);
+          background-color: var(--color-background-disabled);
         }
       }
     }
@@ -313,8 +314,6 @@
       }
     }
   }
-
-
 
   &.size-sm {
     @extend %size-sm;
@@ -364,10 +363,10 @@
 
   &.disabled {
     :global(.react-select__control--is-disabled) {
-      background-color: var(
-        --form-control-background-color-disabled,
-        var(--INTERNAL_form-control-background-color-disabled)
-      );
+      background-color: var(--color-background-disabled);
+    }
+    &:hover {
+      cursor: not-allowed;
     }
   }
 }
